// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachedFiles component AV Check should render download link infected files, preview link for non infected and none for derivatives 1`] = `
[
  {
    "dsi_copyright": null,
    "dsi_dsid": "cats.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 1,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 1,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_cats_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 2,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 2,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_cats_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 3,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 3,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_cats_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 4,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 4,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "infected",
    "dsi_copyright": null,
    "dsi_dsid": "dogs.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 5,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 5,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_dogs_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 6,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 6,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_dogs_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 7,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 7,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_dogs_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 8,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 8,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "clean",
    "dsi_copyright": null,
    "dsi_dsid": "birds.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 9,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 9,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_birds_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 10,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 10,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_birds_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 11,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 11,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_birds_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 12,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 12,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "unscannable",
    "dsi_copyright": null,
    "dsi_dsid": "fish.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 13,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 13,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_fish_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 14,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 14,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_fish_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 15,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 15,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_fish_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 16,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 16,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "clean",
    "dsi_copyright": null,
    "dsi_dsid": "interview.wav",
    "dsi_embargo_date": null,
    "dsi_id": 17,
    "dsi_label": "",
    "dsi_mimetype": "audio/wave",
    "dsi_open_access": 1,
    "dsi_order": 17,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "interview_t.mp3",
    "dsi_embargo_date": null,
    "dsi_id": 18,
    "dsi_label": "",
    "dsi_mimetype": "audio/mp3",
    "dsi_open_access": 1,
    "dsi_order": 18,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "unscannable",
    "dsi_copyright": null,
    "dsi_dsid": "big-file.zip",
    "dsi_embargo_date": null,
    "dsi_id": 19,
    "dsi_label": "",
    "dsi_mimetype": "application/zip",
    "dsi_open_access": 1,
    "dsi_order": 19,
    "dsi_pid": "UQ:252236",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
]
`;

exports[`AttachedFiles component AV Check should render the proper av status icon 1`] = `
[
  {
    "dsi_copyright": null,
    "dsi_dsid": "cats.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 1,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 1,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_cats_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 2,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 2,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_cats_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 3,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 3,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_cats_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 4,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 4,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "infected",
    "dsi_copyright": null,
    "dsi_dsid": "dogs.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 5,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 5,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_dogs_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 6,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 6,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_dogs_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 7,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 7,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_dogs_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 8,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 8,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "clean",
    "dsi_copyright": null,
    "dsi_dsid": "birds.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 9,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 9,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_birds_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 10,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 10,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_birds_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 11,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 11,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_birds_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 12,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 12,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "unscannable",
    "dsi_copyright": null,
    "dsi_dsid": "fish.tiff",
    "dsi_embargo_date": null,
    "dsi_id": 13,
    "dsi_label": "",
    "dsi_mimetype": "image/tiff",
    "dsi_open_access": 1,
    "dsi_order": 13,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "preview_fish_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 14,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 14,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "thumbnail_fish_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 15,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 15,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "web_fish_t.jpg",
    "dsi_embargo_date": null,
    "dsi_id": 16,
    "dsi_label": "",
    "dsi_mimetype": "image/jpg",
    "dsi_open_access": 1,
    "dsi_order": 16,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "clean",
    "dsi_copyright": null,
    "dsi_dsid": "interview.wav",
    "dsi_embargo_date": null,
    "dsi_id": 17,
    "dsi_label": "",
    "dsi_mimetype": "audio/wave",
    "dsi_open_access": 1,
    "dsi_order": 17,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_copyright": null,
    "dsi_dsid": "interview_t.mp3",
    "dsi_embargo_date": null,
    "dsi_id": 18,
    "dsi_label": "",
    "dsi_mimetype": "audio/mp3",
    "dsi_open_access": 1,
    "dsi_order": 18,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
  {
    "dsi_av_check_date": "2000-01-01 00:00:00",
    "dsi_av_check_state": "unscannable",
    "dsi_copyright": null,
    "dsi_dsid": "big-file.zip",
    "dsi_embargo_date": null,
    "dsi_id": 19,
    "dsi_label": "",
    "dsi_mimetype": "application/zip",
    "dsi_open_access": 1,
    "dsi_order": 19,
    "dsi_pid": "UQ:676287",
    "dsi_size": 27932352,
    "dsi_state": "A",
  },
]
`;

exports[`AttachedFiles component should render with default props 1`] = `<div />`;
